# memvid

./: .gitignore  CHANGELOG.md  Cargo.toml  OLLAMA_CHANGELOG.md  OLLAMA_GUIDE.md  QUICK_START_OLLAMA.md  README.md  requirements.txt  setup.py  test_unicode_fix.py
benches/: http_streaming_bench.rs  spectral_benchmark.rs  streaming_bench.rs
bindings/node/: Cargo.toml  index.d.ts
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  memvid_sdk.pyi
bindings/python/src/: lib.rs
data/: eval_fixtures.json
examples/: analyze_qr_sizing.py  basic_usage.rs  chat_simple.py  compression_benchmark.py  concurrent_performance_demo.py  create_bench_file.rs  diagnose_qr_frames.py  early_stopping_demo.py  final_apples_to_apples_test.py  http_streaming.rs  ollama_chat.py  pdf_ingestion.rs  scaling_benchmark.py  test_actual_workflow.py  test_apples_to_apples_qr.py  test_auto_download.rs  test_direct_qr_decode.py  test_frame_ordering_demo.py  test_memvid_decode_accuracy.py  test_phase3_integration_demo.py  test_qr_capacity.py  test_qr_decode_accuracy.py  test_qr_settings_comparison.py  test_retrieval.py  verify_frame_content.py  verify_qr_optimization.py  wikipedia_demo.py
memvid/: config.py  config_fast.py  docker_manager.py  encoder.py  frame_ordering.py  frame_ordering_concurrent.py  index.py  llm_client.py  utils.py
memvid.egg-info/: PKG-INFO  requires.txt
scripts/: benchmark_spectral.py
src/: api_embed.rs  enrichment_worker.rs  graph_search.rs  lib.rs  lore.rs  tests_lex_flag.rs  text_embed.rs
tests/: doctor_recovery.rs  evals.rs  search.rs  streaming.rs  (+5 more)
(+44 files in other folders)
